rebrain/kubernetes/admin/15/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    acme.cert-manager.io/http01-ingress-class: "nginx"
  labels:
    name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 51.250.32.27.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-internal
            port: 
              number: 80
  tls:
  - hosts:
    - 51.250.32.27.nip.io
    secretName: tls-cert
